--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
         	.myModal{
         		z-index: -2;
         		position: absolute;
-        		top: -300%;
+        		left: -100%;
+                        top: 0px;
         		background-color: white;
         		width: 90%;
         		padding: 20px;
@@ -20,8 +21,9 @@
         		background: #AAFFA9;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #11FFBD, #AAFFA9);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #11FFBD, #AAFFA9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+                        width: 100%;
         		padding: 20px;
+
         	}
         	.output{
         		min-height: 300px;
@@ -45,5 +47,13 @@ background: linear-gradient(to right, #11FFBD, #AAFFA9); /* W3C, IE 10+/ Edge, F
                         background: #02AAB0;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #00CDAC, #02AAB0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- color: white; padding: 20px; width: 100%; min-height:270px; 
+ color: white; padding: 20px; min-height:200px; 
+                }
+                .del{
+                        float: right;
+                        z-index: 10000;
+                }
+                .form-check {
+                    
+                        padding-bottom: 20px;
                 }
