--- a/style.css
+++ b/style.css
@@ -1,59 +1,64 @@
-        	.addButton{
-        		cursor: pointer;
-        	}
-        	.myModal{
-        		z-index: -2;
-        		position: absolute;
-        		left: -100%;
-                        top: 0px;
-        		background-color: white;
-        		width: 90%;
-        		padding: 20px;
-        		box-shadow: 2px 3px 10px black;
-        		border-bottom-left-radius: 5px;
-        		border-bottom-right-radius: 5px;
-        	}
-        	.circle{
-        		font-size: 30px;
-        		
-        	}
-        	.adc{
-        		background: #AAFFA9;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #11FFBD, #AAFFA9);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #11FFBD, #AAFFA9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-                        width: 100%;
-        		padding: 20px;
+.addButton{
+        cursor: pointer;
+}
+.myModal{
+        position: absolute;
+        left: -100%;
+        top: 0px;
+        background-color: white;
+        width: 90%;
+        padding: 20px;
+        box-shadow: 2px 3px 10px black;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+}
+.circle{
+	font-size: 30px;
+	
+}
+.adc{
+	background: #AAFFA9;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #11FFBD, #AAFFA9);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #11FFBD, #AAFFA9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        width: 97%;
+        height: 100%;
+	padding: 20px;
+        border-radius: 10px;
 
-        	}
-        	.output{
-        		min-height: 300px;
-        		background-color: black;
-        		border: 4px solid white;
-                        border-radius: 5px;
+}
+.output{
+	min-height: 300px;
+	background-color: black;
+	border: 4px solid white;
+        border-radius: 5px;
 
-        	}
-        	.output pre{
-        		background-color: black;
-        		color: green;
-        		font-size: 20px;
-        	}
-        	.adc:hover{
-        		box-shadow: 0px 0px 30px black;
-        	}
-        	.myModal span{
-        		cursor: pointer;
-        	}
-                .mainDiv{
-                        background: #02AAB0;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #00CDAC, #02AAB0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
- color: white; padding: 20px; min-height:200px; 
-                }
-                .del{
-                        float: right;
-                        z-index: 10000;
-                }
-                .form-check {
-                    
-                        padding-bottom: 20px;
-                }
+}
+.output pre{
+	background-color: black;
+	color: green;
+	font-size: 20px;
+}
+.adc:hover{
+	box-shadow: 0px 0px 30px black;
+}
+.myModal span{
+	cursor: pointer;
+}
+.mainDiv{
+        background: #02AAB0;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #00CDAC, #02AAB0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        color: white; padding: 20px; min-height:200px; 
+}
+.del{
+        float: right;
+        z-index: 10000;
+}
+.form-check {
+    
+        padding-bottom: 20px;
+}
+.cpy{
+        float: right;
+        border: 0.5px black solid;
+}
