--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html,body{
+        padding: 0;
+        margin:0;
+        font-family: 'Poppins', sans-serif;
+}
 .addButton{
         cursor: pointer;
 }
@@ -18,14 +23,11 @@
 	
 }
 .adc{
-	background: #AAFFA9;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #11FFBD, #AAFFA9);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #11FFBD, #AAFFA9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         width: 97%;
         height: 100%;
 	padding: 20px;
         border-radius: 10px;
-
+        font-weight: 1000;
 }
 .output{
 	min-height: 300px;
@@ -46,10 +48,7 @@
 	cursor: pointer;
 }
 .mainDiv{
-        background: #02AAB0;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #00CDAC, #02AAB0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        color: white; padding: 20px; min-height:200px; 
+        color: white;
 }
 .del{
         float: right;
@@ -62,4 +61,27 @@
 .cpy{
         float: right;
         border: 0.5px black solid;
+}
+
+.footer{
+        background-color: #1de9b6;
+        width: 100%;
+        bottom: 0;
+        margin-top: 2em;
+        text-align: center;
+        padding: 1em;
+        font-weight: bold;
+}
+.heading{
+        background-color: #1de9b6;
+        padding: 0.3em;
+
+        padding-left: 1em;
+
+}
+.heading p{
+
+        font-weight: 1000;
+        font-size: 1.5em;
+        margin: 0;
 }
